--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
+  "name": "dynamic-cart-macbook-practice",
+  "version": "0.0.1",
+  "main": "server.js",
+  "license": "none",
+  "repository": "https://github.com/anamerasul/dynamic-cart-macbook-practice",
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "dev": "concurrently \"npm run serve\" \"npm run watch\"",
+    "serve": "live-server .",
+    "watch": "npm run build -- -w",
+    "build": "server.js"
+  },
   "devDependencies": {
     "tailwindcss": "^3.0.22"
   },
   "dependencies": {
+    "express": "^4.17.3",
     "font-awesome": "^4.7.0"
   }
 }
